Репозиторий прав + tests

--- a/TaxiManager.Data.EntityFramework/TaxiManager.Data.EntityFramework.csproj
+++ b/TaxiManager.Data.EntityFramework/TaxiManager.Data.EntityFramework.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="ApplicationContext.cs" />
     <Compile Include="EntityFrameworkEntityRepository.cs" />
+    <Compile Include="EntityFrameworkRightRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
