--- a/TaxiManager.Data.Test/TaxiManager.Data.Test.csproj
+++ b/TaxiManager.Data.Test/TaxiManager.Data.Test.csproj
@@ -69,6 +69,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="RightRepositoryTest.cs" />
     <Compile Include="EntityRepositoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
