--- a/TaxiManager.Data/TaxiManager.Data.csproj
+++ b/TaxiManager.Data/TaxiManager.Data.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="IAgentRepository.cs" />
     <Compile Include="IEntityRepository.cs" />
     <Compile Include="IRightRepository.cs" />
     <Compile Include="Model\Agent.cs" />
