Интерфесы репозиториев машин и водителей.
Проверка на права при получении данных в репозитории агентов

--- a/TaxiManager.Data/TaxiManager.Data.csproj
+++ b/TaxiManager.Data/TaxiManager.Data.csproj
@@ -31,7 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ICarRepository.cs" />
     <Compile Include="IAgentRepository.cs" />
+    <Compile Include="IDriverRepository.cs" />
     <Compile Include="IEntityRepository.cs" />
     <Compile Include="IRightRepository.cs" />
     <Compile Include="Model\Agent.cs" />
