--- a/TaxiManager.NLog/TaxiManager.NLog.csproj
+++ b/TaxiManager.NLog/TaxiManager.NLog.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NLogLoggerPlugin.cs" />
+    <Compile Include="NLogLoggerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
