--- a/TaxiManager.Data.EntityFramework/TaxiManager.Data.EntityFramework.csproj
+++ b/TaxiManager.Data.EntityFramework/TaxiManager.Data.EntityFramework.csproj
@@ -51,6 +51,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationContext.cs" />
+    <Compile Include="EntityFrameworkDrivarRepository.cs" />
+    <Compile Include="EntityFrameworkCarRepository.cs" />
     <Compile Include="EntityFrameworkAgentRepository.cs" />
     <Compile Include="EntityFrameworkEntityRepository.cs" />
     <Compile Include="EntityFrameworkRightRepository.cs" />
