--- a/TaxiManager.Data/TaxiManager.Data.csproj
+++ b/TaxiManager.Data/TaxiManager.Data.csproj
@@ -38,6 +38,7 @@
     <Compile Include="IRightRepository.cs" />
     <Compile Include="Model\Agent.cs" />
     <Compile Include="Model\Car.cs" />
+    <Compile Include="Model\CarRental.cs" />
     <Compile Include="Model\Driver.cs" />
     <Compile Include="Model\Entity.cs" />
     <Compile Include="Model\EntityGuids.cs" />
